[project]
name = "python_template"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = []

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["python_template"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.hatch.build.targets.wheel]
packages = ["src/python_template"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
