[project]
name = "hodler"
version = "0.1.0"
description = ""
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bs4>=0.0.2",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 79
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.10.0",
]
